adding licence to composer.json

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
             "email": "sooniic@live.com"
         }
     ],
+    "license": ["MIT"],
     "require": {
         "phpunit/phpunit": "^9.5"
     },
