--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,6 @@
        "phpstan": "vendor/bin/phpstan analyse src",
         "rector": "vendor/bin/rector",
         "test": "./vendor/bin/phpunit tests"
-    }
+    },
+    "minimum-stability": "dev"
 }
